Split ft sections into prep/entry and encounters

--- a/src/content/docs/crescent/ftb.mdx
+++ b/src/content/docs/crescent/ftb.mdx
@@ -10,17 +10,47 @@ import { Icon } from '@astrojs/starlight/components';
 import { Image } from 'astro:assets';
 import Footer from '@components/Footer.astro'
 
-## Basics, Entry, etc.
-Forked Tower: Blood is the capstone raid released in 7.25 alongside Occult Crescent: South Horn. It features many difficult encounters designed for a minimum of 24 players to participate in.
-It features limited raising in both methods and a lives sytems along with more gimmicky mechanics that require the usage of specific Phantom Jobs such as Geomancer, Time Mage, and Thief.
+## What is the Forked Tower: Blood?
+Forked Tower: Blood is the first iteration of high-end large-scale raiding content, that's normally seen in Field Ops, for the Occult Crescent. Inside this half of the tower are dangerous foes, hidden traps, fiendish bosses, and most importantly... LOOT! Namely Forked Tower allows players to complete their occult record books they've been keeping up with. As well as upgrade their Arcanaut's gear to the +2 version with Sanguinite, this raid's unique currency earned from chests all inside.
 
+The raid consistent of multiple encounters some of which are bosses, others are more puzzle-like, or require players to traverse dangerous pathways. In order of appearance the raid plays out as follows:
+1. Demon Tablet
+2. Hallways
+3. Dead Stars
+4. Bridges
+5. Marble Dragon
+6. Lockwards
+7. Magitaur
 
-### Required Phantom Jobs
+:::caution[Enraging Fights]
+**Demon Tablet, Dead Stars, Bridges, Marble Dragon, and Magitaur** are all considered "enraging fights"
+in which they must be completed within a certain timer; else the boss will enrage and kill the whole group. Forcing everyone to return out to base camp and re-level.
+:::
+
+Similar with Baldesian Aresenal in Eureka - being made to return out of Forked Tower while dead will force players to lose Knowledge XP and subsequently level down to 19. So be warned! This content is punishing! Though,
+re-leveling is more tedious than anything. Getting back to level 20 requires doing at least 1 CE after patch 7.4's changes to XP loss on return. The biggest loss here is the time of waiting to re-enter Forked Tower.
+
+<br/><hr/>
+## Limited Raising and Lives
+While in Forked Tower: Blood you a Resurrection Restricted debuff will be placed on participants. This debuff starts at three stacks and act as your "lives" while inside the Forked Tower.
+After you die and then accept a raise, you will lose one stack of debuff or life (for simplicity, I will call them just lifes/lives from now on). When reaching 1 life, dying, and accepting another raise - your 
+Ressurection Restricted will turn into a Ressurection Denied.
+
+From this point onwards, your next death is premanent. No method of raising can revive you and you are required to return out to Base Camp. Thus
+causing you to level down and grind back to KL20. Don't worry though, getting back to KL20 is just 2 FATEs and 1 CE away (or gold farming a little bit).
+
+With that, the methods in which you can be raised are also extremely limited. So far, there are only two methods in which you can be raised are
+1. Phantom Chemist with the Raise ability (unlocked at level 3)
+2. Healer Limit Break 3.
+
+Both methods will consume 1 life and the healer limit break 3 does *__not__* circumvent the resurrection denied status.
+
+<br/><hr/>
+## Required Phantom Jobs
 The list of *actually mandatory* phantom jobs is really short. You just need a two time mages, thieves, bards, geomancers, and a single berserker for specific mechanics/sections. However, there are other jobs that aren't "required" but will definitely make
 your experience much easier. In no particular order the following phantom jobs are strongly encouraged to be brought.
-
 <details>
-<summary>List and Explanation of Required Phantom Jobs</summary>
+<summary>List and Explanation of Useful Phantom Jobs</summary>
 - **Phantom Time Mage**:
 A required phantom job to complete Forked Tower: Blood. Needed for dispelling specific adds at Demon Tablet, Bridges, and Lockwards. Can also slow a majority of adds throughout Forked Tower.
 
@@ -32,7 +62,8 @@ A required phantom job to complete Forked Tower: Blood. Helps increase a party's
 the Idols will instantly wipe the group.
 
 - **Phantom Thief**:
-A required phantom job to complete Forked Tower: Blood. Percepts hidden traps and opens locked/hidden passages to help the group earn more Sanguinite.
+A required phantom job to complete Forked Tower: Blood. Percepts hidden traps and opens locked/hidden passages to help the group earn more Sanguinite. Also uses
+Pilfer Weapon to remove a buff off an enemy during Lockwards.
 
 - **Phantom Berserker**:
 A required phantom job to complete Forked Tower: Blood. Used at Magitaur to kill the purple canister with their Rage ability to avoid being afflicted with Hysteria for 60 seconds.
@@ -58,28 +89,35 @@ Majority of players should be on this phantom job as it's the highest, most cons
 Iainuki can also be used in the Hallways and Lockwards sections to have a 10% chance to instantly kill a mob when hit.  
 </details>
 
-### Limited Raising and Lives
-While in Forked Tower: Blood you a Resurrection Restricted debuff will be placed on participants. This debuff starts at three stacks and act as your "lives" while inside the Forked Tower.
-After you die and then accept a raise, you will lose one stack of debuff or life (for simplicity, I will call them just lifes/lives from now on). When reaching 1 life, dying, and accepting another raise - your 
-Ressurection Restricted will turn into a Ressurection Denied.
+### Alliance and Party Set Ups
+These lists are more catered to prog-type groups. If you are in reclears or speedrun modes you lists can and will look much more different than these.
+Ideally anyone who is not on a main role should be playing a DPS oriented phantom job to help make beating enrages easier.
+#### Absolutely Required
+You should have one of these in alliances ABC and 123 due to mechanics that split the raid into two alliances. Back ups are encouraged just in case one perma-dies in prog.
+- Phantom Thief (one per side)
+- Phantom Geomancer (one per side)
+- Phantom Time Mage (one per side)
+- Phantom Bard (one per side)
+- Phantom Berserker (Only one is required for the whole raid)
+#### Strongly Encouraged
+These are really, really nice to have to either reduce damage taken, increase the party's damage, increase damage for whole raid, or make the hallways just a little safer.
+- Phantom Knight (one per party)
+- Phantom Bard (one per party)
+- Phantom Chemist (one per party)
+- Phantom Ranger (one per side)
+- Phantom Dancer (x1)
+- Phantom Mystic Knight (x1)
+#### If not assigned a key role...
+You should be playing Phantom Samurai. It is the easiest and most consistent source of damage due to Iainuki and Zeninage being so powerful.
+Phantom Monk is a strong DPS option too! However it suffers from having the 15y kick. If you play Phantom Monk please exercise large amounts of caution when pressing Phantom Kick.
 
-From this point onwards, your next death is premanent. No method of raising can revive you and you are required to return out to Base Camp. Thus
-causing you to level down and grind back to KL20. Don't worry though, getting back to KL20 is just 2 FATEs and 1 CE away (or gold farming a little bit).
-
-With that, the methods in which you can be raised are also extremely limited. So far, there are only two methods in which you can be raised are
-1. Phantom Chemist with the Raise ability (unlocked at level 3)
-2. Healer Limit Break 3.
-
-Both methods will consume 1 life and the healer limit break 3 does *__not__* circumvent the resurrection denied status.
-
-<br></br>
-<hr></hr>
-
+<br/><hr/>
 ## Preparing for Forked Tower: Blood
 Getting ready to enter Forked Tower: Blood requires you to complete a list of objectives before even considering entering the Forked Tower.
 1. Complete the "Past and Crescent" quest just past the point of completing the "Calamity Bound" Critical Engagement.
 2. Reach Knowledge Level 20
 3. Obtain a Sanguine Cipher(s) (purchased with either Silver or Gold pieces) from the Expedition Antiquarian
+   - Everyone is **required** to offer a cipher to enter Forked Tower: Blood.
 4. Fully level (or "master") a few different Phantom Jobs to fully unlock their kits and gain a few stacks of Phantom Mastery.
 5. (Optional) Obtain a few pieces of Arcanaut's gear for your preferred role(s).
 
@@ -96,228 +134,168 @@ For a list of phantom jobs to focus, please consult the image below.
 />
 <p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
 
-<br></br>
-<hr></hr>
+<br/><hr/>
+## Entering Forked Tower: Blood
+Forked Tower: Blood can only be entered during Auroral Mirages weather. These mirages are a brief 5 minute period in which the South Horn turns an eerie red and the Forked Tower is just barely visible in the North West
+corner of the area. Auroral Mirages appear in a random, yet predictable, manner.
 
-## Encounters/Bosses
-All guides linked below will feature the same strats, just with a different presentation and/or slightly different explainations. Both will result in the same outcomes when resolved.
-These strats are all used by the featured N.A. Discords linked [here](/others/discords)
+:::danger[Documenting the Crescent]
+Most of this section is here to help document the mechanics of Forked Tower: Blood. While it *could* happen, spontaneous attempts forming in instance are extremely rare.
 
-### General Encounter Resources
-- <a href="https://docs.google.com/spreadsheets/d/1Nb4pnAjHg06r7zR3bJEUaZ7gwcX4nue0YIuybVdvpVk" target="_blank">**Fight Timelines**</a>
-- <a href="https://docs.google.com/spreadsheets/d/1UlbGYBrhVn4L1isfcVACOqLlYclHeP9Zazj6PfM3Y8U" target="_blank">**Tank Mitigation**</a> (includes pKnight, Non-pKnight, Berserker)
-- <a href="https://docs.google.com/spreadsheets/d/1wHcHBrO41f7BNaJmRCqxGwdv9bldhb-4m2YfcVWWzbM" target="_blank">**Healer Mitigation**</a> (include pBard timings)
-<br></br>
-<hr></hr>
+If you are looking to seriously progress and clear Forked Tower on the N.A. datacenters, it is encouraged to join one of the many [Discords](/others/discords).
+:::
+### Forked Tower: Blood Spawn Mechanics
+Under the hood there is a hidden timer. In a fresh, **new instance this timer starts at 5 minutes**. In an existing instance, meaning the first Auroral Mirages has already passed, the timer begins at 60 minutes.
+This timer can also be reduced by completing FATEs and Critical Encounters. 
+- Completeing **FATEs (Pots included)** will reduce the timer by 1 minute.
+- Completeing **Critical Encounters** will reduce the timer by 5 minutes. 
 
-### Demon Tablet
-- <a href="https://raidplan.io/plan/7Y88dbybDIm5wgTs" target="_blank">**Raidplan**</a>
-- <a href="https://docs.google.com/presentation/d/12fRuTLrDoIDrQBVBkg2s3Nrd1NpwOjMxFPlbfikGiz0/edit?slide=id.p#slide=id.p" target="_blank">**Google Slides**</a>
-- **Pocket Guides** (mini-video guides)
-  - <a href="https://www.youtube.com/watch?v=_xUnzMOdV1c" target="_blank">Pocket Guide to Cometeor</a>
-  - <a href="https://i.imgur.com/3kN0SMB.mp4" target="_blank">Pocket Guide to Demonology 2</a>
+Once this timer has elapsed, a few more checks are made before the zone switches into Auroral Mirages and opening the Forked Tower for recruitment.
+1. There are at least 24 people of Knowledge Level 20 in the instance.
+2. There are at least 24 people with Forked Tower: Blood unlocked
+   - This can be done by progressing past the "Past and Crescent" quest.
+3. There is no critical engagement currently recruiting or in progress.
+   - If you are in an pre-organized group, do not spawn any critical engagement as you will delay the tower spawning.
 
-<Image
-    src="/ft/demon_tablet.png"
-    width="600"
-    height="400"
-    decoding="async"
-    loading="eager"
-    alt="Demon Tablet Cheatsheet"
-    onclick="window.open('/ft/demon_tablet.png','_blank')"
-    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
-/>
-<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
-<br></br>
+If these three conditions are **NOT** met, the timer will 'pause' in its elapsed state until they are both met--which causes the mirages to spawn instantly.
 
-<details>
-<summary>Fight PoVs</summary>
-- <a href="https://www.youtube.com/watch?v=1D-QL9vkdk4" target="_blank">Viper / p.Sam</a>
-- <a href="https://youtu.be/FH756gtcQ74" target="_blank">Paladin / p.Knight</a>
+### How to get into Forked Tower: Blood
+- 24 unique players must offer Sanguine Ciphers to the reliquary during the Auroral Mirages weather. This weather window only lasts 5 minutes long so please be hasty about inputting your ciphers!
+  - If the 24 unique cipher minimum is met: the pad will glow even brighter and everyone on the pad, up to a total of 48 people who also offered ciphers, will be teleported into Forked Tower: Blood after roughly 30 more seconds.
+- If there are more than 48 ciphers offered, the people who offered enough ciphers to meet the "Offering Threshold" in the new Cipher UI will be guaranteed entry.
+  -  All other spots, if any remain, will be randomly selected from the people who offered any amount of ciphers.
+  - However, if less than 48 ciphers were offered, only those who offered ciphers will be allowed entry into Forked Tower. 
+- You *must* be on the teleporter pad when given the "Right of Entry" buff else you will not be teleported into the tower nor will you ciphers be refunded.
 
-</details>
-<br></br>
-<hr></hr>
+:::danger[Ciphers Required]
+Anyone wishing to enter Forked Tower: Blood **MUST** offer a Sanguine Cipher to the reliquary to be even considered for entry.
 
-### Hallways
-- <a href="https://docs.google.com/presentation/d/1FB06sUFYWn3gKa1x61r1i4faTEzK5OgBFHsDo8lYakA/present#slide=id.p" target="_blank">**Google Slides**</a>
-:::danger[*Be Careful of Traps, Thieves, and Rangers*]
-During this section of Forked Tower you should always be far behind your Thieves and Rangers as they scout ahead to precept/remove traps. 
-If you stand to close to any of these things, you risk dying. Do not waste your valuable lives.
+No cipher, no entry.
 :::
 
-<Image
-    src="/ft/hallways_traps.png"
-    width="500"
-    height="200"
-    decoding="async"
-    loading="eager"
-    alt="Hallways Traps and Hidden Passages map"
-    onclick="window.open('/ft/hallways_traps.png','_blank')"
-    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
-/>
-<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
+### How the Cipher UI Works
+In patch 7.3 we were given a brand new UI for the cipher reliquary! Most notably it adds a warning saying that Forked Tower is difficult content and informing players that coordination is *required*. Also there is a mention that entry is not guaranteed along with other statistics about:
+- **You have offered:** Amount you of ciphers you've offered.
+- **Offering Threshold**: The amount of ciphers in place to guaranteed an entry. You must offer that many ciphers plus one more to be guaranteed entry [Unconfirmed, Logical though]. This concludes we have a TIER based system similar to notoriety for duels.
+- **Current Participants:** Number of participants means there's that many unique players offering ciphers.
+- **Seeking Passage:** The amount of people who have entered ciphers but do not have a guaranteed entry as they have put in a number of ciphers BELOW the offering threshold (2 in this case).
+- **Remaining Places:** Number of spots left that are guaranteed by meeting the offering threshold.
+- **Priority Places**: Number of people who have offered enough ciphers to garauntee entry (see the little yellow text below my offer amount).
 
 <Image
-    src="/ft/hallways_mobs.png"
-    width="600"
-    height="400"
-    decoding="async"
-    loading="eager"
-    alt="Hallway Mobs Resistances"
-    onclick="window.open('/ft/hallways_mobs.png','_blank')"
-    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
-/>
-<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
-<br></br>
-<hr></hr>
-
-### Dead Stars
-- <a href="https://raidplan.io/plan/eb7h5wKdMLui__PV" target="_blank">**Raidplan**</a>
-- <a href="https://docs.google.com/presentation/d/1yh8cJQvk0V2T8IKR5ppYLPX7Q2pbAXEsB81iAc1C3nI/present?slide=id.p" target="_blank">**Google Slides**</a>
-- **Pocket Guides** (mini-video guides)
-  - <a href="https://youtu.be/kvyuk_0zt2o?si=PRtPsdSECTQhz1OR" target="_blank">Slimes</a>
-  - <a href="https://youtu.be/cElNEPKTOaw" target="_blank">Snowballs</a>
-  - <a href="https://youtu.be/9nAEFS7Y7HM?si=a05JkCYdr957eVmN" target="_blank">Fireball Towers</a>
-
-<Image
-    src="/ft/dead_stars.png"
-    width="500"
-    height="200"
-    decoding="async"
-    loading="eager"
-    alt="Dead Stars Cheatsheet"
-    onclick="window.open('/ft/dead_stars.png','_blank')"
-    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
-/>
-<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
-
-<details>
-<summary>Fight PoVs</summary>
-- <a href="https://youtu.be/jZrH7kkxVbo" target="_blank">Monk / p.Sam</a>
-- <a href="https://youtu.be/PBOLmnBXtPo" target="_blank">Paladin / p.Knight</a>
-
-</details>
-<br></br>
-<hr></hr>
-
-### Bridges
-- <a href="https://docs.google.com/presentation/d/1JXFyTkLjPNYXwvOi02Uu9tZPN515onZU2LwNuPyMPR8/present" target="_blank">**Google Slides**</a>
-
-:::danger[*Be Careful of Traps, Thieves, and Rangers*]
-During this section of Forked Tower you should always be far behind your Thieves and Rangers as they scout ahead to precept/remove traps. 
-If you stand to close to any of these things, you risk dying. Do not waste your valuable lives.
-:::
-
-<Image
-    src="/ft/bridges_map.png"
-    width="700"
-    height="400"
-    decoding="async"
-    loading="eager"
-    alt="Bridges Cheatsheet"
-    onclick="window.open('/ft/bridges_map.png','_blank')"
-    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
-/>
-<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
-
-<details>
-<summary>Fight PoVs</summary>
-- <a href="https://youtu.be/tUOvLmTp_0g" target="_blank">Monk / p.Sam</a>
-
-</details>
-
-<br></br>
-<hr></hr>
-
-### Marble Dragon
-- <a href="https://raidplan.io/plan/t-nZwGnfgReh9Hib" target="_blank">**Raidplan**</a>
-- <a href="https://docs.google.com/presentation/d/1YeOhNZHb7fEyE25EAkP9UoQ8TBhInbrgguYtVdNIIAQ/present?slide=id.p" target="_blank">**Google Slides**</a>
-- **Pocket Guides** (mini-video guides)
-  - <a href="https://youtu.be/AQaZ-xhleoE" target="_blank">Adds Phase</a>
-  - <a href="https://youtu.be/BFjT9yJW6_8" target="_blank">Imitation Rain 4</a>
-
-<Image
-    src="/ft/marble_cheat_sheet.png"
-    width="500"
-    height="400"
-    decoding="async"
-    loading="eager"
-    alt="Bridges Cheatsheet"
-    onclick="window.open('/ft/marble_cheat_sheet.png','_blank')"
-    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
-/>
-<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
-
-<details>
-<summary>Fight PoVs</summary>
-- <a href="https://youtu.be/-XOl2Smt1eE" target="_blank">Monk / p.Sam</a>
-
-</details>
-
-<br></br>
-<hr></hr>
-
-### Lockwards
-- <a href="https://docs.google.com/presentation/d/1x6711dkqAdIJdtE0KuhQVj7Qfa-9GmZonX-DZBR7jdM/present" target="_blank">**Google Slides**</a>
-
-:::danger[*Be Careful of Traps, Thieves, and Rangers*]
-During this section of Forked Tower you should always be far behind your Thieves and Rangers as they scout ahead to precept/remove traps. 
-If you stand to close to any of these things, you risk dying. Do not waste your valuable lives.
-:::
-
-<Image
-    src="/ft/lockwards_trap_map.png"
+    src="/ft/cipher_ui.png"
     width="400"
     height="200"
     decoding="async"
     loading="eager"
-    alt="Bridges Cheatsheet"
-    onclick="window.open('/ft/lockwards_trap_map.png','_blank')"
+    alt="cipher_ui"
+    onclick="window.open('/ft/cipher_ui.png','_blank')"
     style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
 />
 <p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
 
+<br/><hr/>
+## Pre-Organized Forked Tower Entry
+Players can enter the South Horn in groups of 2-48 players. When entering as a group of 24 or more and assuming everyone meets the conditions listed below--the group will be placed
+in a private, locked instance of South Horn. No one can enter this instance for the next 10 minute period or whenever the first Auroral Mirages has passed. This help alleviates any stress a
+pre-organized group might have with getting everyone in their group into Forked Tower.
+#### Private Instance Requirements
+- Group of 24 or larger queueing in together
+- 24+ members are Knowledge Level 20 (or higher)
+- 24+ members have progressed the quest *"Past and Crescent"* enough to have unlocked Forked Tower: Blood.
+
+### Setting up a Party Finder
+It's simple! Use the Party Finder UI under Alliance > Field Operations and set the activity to The Occult Crescent: South Horn! 
+From there you can select which party to put yourself in and modify the party compositions by either right clicking to cycle through a normal Full Party (2 tanks, 2 healers, 4 DPS), 
+an alliance raid full party (1 tank, 2 healers, 5 DPS), or completely open to any job regardless of role/combat.
+If you want to more finely tune a specific party you can left click one and hand select the specific role or jobs for that spot. 
+This can be useful in anyprogs or free-for-all password drop runs where everyone rushes to join the party finder first.
 <Image
-    src="/ft/lockwards_guide.png"
-    width="600"
+    src="/ft/pfsetup.png"
+    width="500"
     height="400"
     decoding="async"
     loading="eager"
-    alt="Bridges Cheatsheet"
-    onclick="window.open('/ft/lockwards_guide.png','_blank')"
+    alt="pfsetup"
+    onclick="window.open('/ft/pfsetup.png','_blank')"
     style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
 />
 <p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
 
-
-<br></br>
-<hr></hr>
-
-### Magitaur
-- <a href="https://docs.google.com/presentation/d/15Mbb5oVXmfGVErUI1gCce3QZ-AjPNX6D7q1PJ5V4hB8/present?slide=id.p" target="_blank">**Google Slides**</a>
-- <a href="https://mathranger101.itch.io/magitaur-sim" target="_blank">**Magitaur Mechanic Simulator**</a> (browser based game)
-- **Pocket Guides**
-  - <a href="https://youtu.be/iZgTBbww1qo" target="_blank">BAP Daggers</a>
-  - <a href="https://youtu.be/T2hXow9pvWI" target="_blank">Rune Axe</a>
-  - <a href="https://youtu.be/TQuON4f6OBA" target="_blank">Holy Lance</a>
+#### Alliance Level Editing
+Shown is right click the various parties to change their inital make up
 
 <Image
-    src="/ft/magitaur_cheatsheet.png"
-    width="600"
+    src="/ft/party_adjust.gif"
+    width="500"
     height="400"
     decoding="async"
     loading="eager"
-    alt="Bridges Cheatsheet"
-    onclick="window.open('/ft/magitaur_cheatsheet.png','_blank')"
+    alt="pfsetup"
+    onclick="window.open('/ft/party_adjust.gif','_blank')"
     style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
 />
+<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
 
-<details>
-<summary>Fight PoVs</summary>
-- <a href="https://youtu.be/9L7PZe8DnYk" target="_blank">Monk / p.Sam</a>
-</details>
+#### Party Level Editing
+For each individual spot in a party you can pick and choose which role or even down which specific jobs can join. Useful in an anyprog to ensure a 5% stat bonus for each party!
 
-<br></br>
+Also you can make spots free (allowing anyone of any job to join it) or completely omit the spot preventing anyone from joining it.
 
+<Image
+    src="/ft/party_ui.png"
+    width="500"
+    height="400"
+    decoding="async"
+    loading="eager"
+    alt="pfsetup"
+    onclick="window.open('/ft/party_ui.png','_blank')"
+    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
+/>
+<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
 
+### Reminders Before Joining a Run
+Ideally you do these *before* joining the party finder but its always good to stress them again and again...
+1. **Make sure you are Knowledge Level 20!**
+   - You can confirm this by either talking to Jeffroy in the Phantom Village and asking to confirm level and currencies OR by entering the South Horn solo to check there instead. Both methods work as long as you confirm you are level
+
+<Image
+    src="/ft/jeff1.png"
+    width="350"
+    height="200"
+    decoding="async"
+    loading="eager"
+    alt="jeff1"
+    onclick="window.open('/ft/jeff2.png','_blank')"
+    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
+/>
+<Image
+    src="/ft/jeff2.png"
+    width="350"
+    height="200"
+    decoding="async"
+    loading="eager"
+    alt="pfsetup"
+    onclick="window.open('/ft/jeff2.png','_blank')"
+    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
+/>
+<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
+
+2. **Ensure you have Ciphers!**
+   - As of patch 7.3 anyone who wishes to enter Forked Tower: Blood must offer a Sanguine Cipher to the Reliquary to even be considered a possible entrant. This can be done in the same method by asking Jeffroy or entering South Horn.
+3. **Bring Food, Tinctures, and any Arcanaut's gear you can get!**
+   - Food is for viatility and extra substats, tinctures is for your openers and other burst windows if allowed, and Arcanaut's gear is just a flat damage increase!
+
+### Once Inside South Horn
+The group can feel free to do what they want until the weather changes into mirages--finding chests, getting ciphers, etc... Please just remind people to not die in awkward spots or avoid dying at all.
+Now is also a great time to check for level 19s if any managed to slip by. You can easily do a mini-gold farm on level 27 mobs in the South West to quick bring them back to level 20 if desired.
+
+:::danger[Ciphers Required]
+**Everyone wishing to participate in Forked Tower is required to input a cipher to the reliquary to even be given the chance to enter Forked Tower.** There is no more tax evasion or free rides.
+:::
+
+:::note[Periodically Check Cipher Statuses]
+You should check every so often to ensure people have put their ciphers in. The amount of ciphers offered should equal the number of people currently in instance.
+
+You can see the number of people in your instance through the adventurer list UI.
+:::
